--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 services:
-  babylonjs-game:
+  luna:
     image: node:19-alpine3.16
-    container_name: babylonjs-game
+    container_name: luna
     ports:
       - 5173:5173
     volumes:
